<resources>
    <string name="app_name">ReminderApp</string>
    <string name="app_label">Reminder</string>
    <string name="login_name">Username</string>
    <string name="login_button">Login</string>
    <string name="login_pass">Password</string>
    <string name="logout">LogOut</string>
    <string name="profile">Profile</string>
    <string name="sharedPreferences" translatable="false">com.example.project</string>
    <string name="dbFilename" translatable="false">com.example.project</string>
    <string name="message">Message</string>
    <string name="short_message">Short message</string>
    <string name="creator">Creator</string>
    <string name="creators_id">Creators Id</string>
    <string name="reminder_time">Reminder date</string>
    <string name="dd_mm_yyyy">dd.mm.yyyy</string>
    <string name="location">Location</string>
    <string name="seen_not_seen">Seen, Not seen</string>
    <string name="terrain_map">Terrain map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="normal_map">Normal map</string>
    <string name="mock_location">Mock location</string>
</resources>