<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/infoMsgHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/message"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoMsgText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/short_message" />

    <TextView
        android:id="@+id/infoCreatorHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/creator"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoCreatorId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/creators_id" />

    <TextView
        android:id="@+id/infoCreateTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="Created dd.mm.yyyy" />

    <TextView
        android:id="@+id/infoTimeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/reminder_time"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoTimeStr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/dd_mm_yyyy" />

    <TextView
        android:id="@+id/infoReminderSeen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="@string/seen_not_seen" />

    <TextView
        android:id="@+id/infoLocationHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/location"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/infoLocationX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="0.000" />

    <TextView
        android:id="@+id/infoLocationY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="18sp"
        android:text="0.000" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/purple_500" />
</LinearLayout>